--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,13 @@
-html,
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+body {
+  width: 100%;
+  height: 100%;
+}
+
+/* html,
 body {
   padding: 0;
   margin: 0;
@@ -13,4 +22,4 @@ a {
 
 * {
   box-sizing: border-box;
-}
+} */
